--- a/Ajconnect.css
+++ b/Ajconnect.css
@@ -1,6 +1,16 @@
+:root {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: rgb(194, 194, 194);
+}
+
+.hello {
+  font-weight: 700;
+}
+
 .wrapper {
   width: 100%;
   height: 100vh;
+  background-color: rgb(194, 194, 194);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,8 +18,9 @@
 
 .holder {
   width: 500px;
-  height: 550px;
-  background-color: gray;
+  border-radius: 8px;
+  height: 500px;
+  background-color: white;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -18,7 +29,8 @@
 .head {
   width: 100%;
   height: 70px;
-  background: black;
+  border-radius: 8px 8px 0px 0px;
+  background: rgb(61, 61, 61);
   color: white;
   display: flex;
   justify-items: center;
@@ -26,7 +38,6 @@
 }
 
 .logo {
-   
   display: flex;
   justify-items: center;
   align-items: center;
@@ -35,8 +46,38 @@
   font-size: 20px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-.main{
-    margin-top: 10px;
-    width: 90%;
-    height: 400px;
+.main {
+  margin-top: 10px;
+  width: 90%;
+  height: 400px;
+}
+
+.well {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.click-me {
+  padding: 10px 20px;
+  background-color: blue;
+  border: none;
+  border-radius: 3px;
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 350ms;
+}
+
+span {
+  font-weight: bolder;
+  margin-right: 5px;
+}
+
+a {
+  text-decoration: none;
+  font-weight: 500;
 }
