--- a/Ajconnect.css
+++ b/Ajconnect.css
@@ -73,7 +73,7 @@
   transition: all 350ms;
 }
 
-span {
+.note{
   font-weight: bolder;
   margin-right: 5px;
 }
@@ -81,4 +81,14 @@ span {
 a {
   text-decoration: none;
   font-weight: 500;
+}
+
+.sign{
+  
+}
+
+.touch{
+  margin-left: 7px;
+  font-style: italic;
+  font-weight: 700;
 }
